<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c1f2f5"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageButton
                android:id="@+id/bHamburgerIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:contentDescription="@string/condesc_menu_icon"
                app:srcCompat="@drawable/ic_menu" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:textColor="#000000"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pageBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragmentView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/menuBlack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.0"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/menuContainer"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:id="@+id/menu"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/menu_shape"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="30dp" />

                        <LinearLayout
                            android:id="@+id/bMenuToDoList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:contentDescription="@string/condesc_menu_button_to_do_list"
                                app:srcCompat="@drawable/ic_check_box" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_to_do_list"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <LinearLayout
                            android:id="@+id/bMenuTimetable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:contentDescription="@string/condesc_menu_button_timetable"
                                app:srcCompat="@drawable/ic_grid" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_timetable"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <LinearLayout
                            android:id="@+id/bMenuGoals"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:contentDescription="@string/condesc_menu_button_goals"
                                app:srcCompat="@drawable/ic_trophy" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_goals"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <LinearLayout
                            android:id="@+id/bMenuTimers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:contentDescription="@string/condesc_menu_button_goals"
                                app:srcCompat="@drawable/ic_timer" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_timers"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <LinearLayout
                            android:id="@+id/bMenuNotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                app:srcCompat="@drawable/ic_notes" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_notes"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp" />

                        <LinearLayout
                            android:id="@+id/bMenuSettings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                app:srcCompat="@drawable/ic_settings_cog" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:paddingLeft="30dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:text="@string/menu_button_settings"
                                android:textSize="22sp" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>